--- a/main.css
+++ b/main.css
@@ -21,10 +21,30 @@
 	border-width: 5px;
 	border-color: black;
 	width: 500px;
-	height: 900px;
+	height: 1500px;
 	padding-top: 10px;
 	padding-right: 100px;
 	padding-left: 10px;
 	padding-bottom: 10 px;
 	background-color: rgb(253, 245, 230);
+}
+
+li {
+	font-size:  10px;
+}
+
+ul li {
+	font-size: 16px;
+}
+
+.box ul li {
+	font-size: 16px;
+}
+
+#small {
+	font-size: 16px;
+}
+
+span {
+	background-color: yellow;
 }
